# intel-graph

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/intel-graph/: __init__.py  app.py  nodes.py
src/intel_graph/: __init__.py  app.py  app_ui.py  nodes.py  server.py  state.py
tests/: test_scraper.py  test_workflow.py
