[project]
name = "intel-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "streamlit>=1.59.2",
    "uvicorn>=0.51.0",
]


[tool.setuptools]
packages = ["intel_graph"]
package-dir = {"" = "src"}

# Modern UV dependency grouping structure
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]
